# tmn-codle-mcp

./: .env.e2e.example  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  REVIEW.md  SETUP.md  TODO.md  install.sh  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/: pull_request_template.md
.github/workflows/: build-codle-mcp-dev.yml  build-codle-mcp-prd.yml  check-type.yml  prettier.yml  release.yml  test.yml
e2e/: README.md  global-setup.ts  mcp-config.json  parse-result.sh  run.js  run.sh  vitest.config.ts
e2e/fixtures/: claude.ts  cli.ts  upload-solution.py
e2e/lib/: claude-runner.ts  factory.ts  ndjson.ts  stats-reporter.ts
e2e/tests/: activitiables.test.ts  activities.test.ts  activityUpload.test.ts  docs.test.ts  entryActivityGoals.test.ts  htmlActivityPages.test.ts  imageUpload.test.ts  materials.test.ts  problems.test.ts  resources.test.ts  tags.test.ts
scripts/: run-e2e.sh
src/: base-command.ts  config.ts  context.ts  index.ts  logger.ts  server.ts
src/api/: client.ts  directUpload.ts  errors.ts  models.ts
src/auth/: callback-server.ts  (+5 more)
tests/: activitiables.test.ts  activities.test.ts  activityUpload.test.ts  buildQuizBlocks.test.ts  bundles.test.ts  client.test.ts  conftest.py  convertFromMarkdown.test.ts  directUpload.test.ts  directives.test.ts  helpers.ts  htmlActivityPages.test.ts  materials.test.ts  models.test.ts  problems.test.ts  resolveLocalImages.test.ts  run-command.ts  tags.test.ts  test_activities.py  test_bundles.py  test_client.py  test_models.py  test_problems.py
(+85 files in other folders)
